docs: Prevent code overflow

--- a/lib-govuk/components/assets/_code.scss
+++ b/lib-govuk/components/assets/_code.scss
@@ -10,6 +10,7 @@ code {
 pre {
   > code {
     display: block;
+    overflow-y: scroll;
     padding: 1em;
   }
 }
